# project1_kabaev_roman_DPO_25

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  types.py  utils.py
