[project]
name = "project1-kabaev-roman-dpo-25"
version = "0.1.0"
description = "Текстовая приключенческая игра 'Лабиринт Сокровищ' - исследуйте лабиринт, решайте загадки и находите сокровища"
authors = [{ name = "Roman Kabaev" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.poetry]
packages = [{ include = "labyrinth_game" }]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff (>=0.14.0,<0.15.0)"
]
